--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
+
 import ContactUs from '~/components/widgets/Contact.astro';
 
 const metadata = {
@@ -30,5 +31,8 @@ const metadata = {
       label:
         'By submitting this contact form, you acknowledge and agree to the collection of your personal information.',
     }}
+    title="Get in Touch"
+    subtitle="For all general inquiries please send us a message using the general form. New clients, please fill out the New Client Form to submit your hair information prior to your appointment."
+    tagline="Contact"
   />
 </Layout>
