--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,6 +2,10 @@
 import Layout from '~/layouts/PageLayout.astro';
 
 import ContactUs from '~/components/widgets/Contact.astro';
+import WidgetWrapper from '~/components/ui/WidgetWrapper.astro';
+import HeroText from '~/components/widgets/HeroText.astro';
+import { Image } from 'astro:assets';
+import GoogleMaps from '~/components/widgets/GoogleMaps.astro';
 
 const metadata = {
   title: 'Contact',
@@ -10,29 +14,66 @@ const metadata = {
 
 <Layout metadata={metadata}>
   <!-- HeroText Widget ******************* -->
-  <ContactUs
-    id="form"
-    inputs={[
-      {
-        type: 'text',
-        name: 'name',
-        label: 'Name',
-      },
-      {
-        type: 'email',
-        name: 'email',
-        label: 'Email',
-      },
-    ]}
-    textarea={{
-      label: 'Message',
-    }}
-    disclaimer={{
-      label:
-        'By submitting this contact form, you acknowledge and agree to the collection of your personal information.',
-    }}
-    title="Get in Touch"
-    subtitle="For all general inquiries please send us a message using the general form. New clients, please fill out the New Client Form to submit your hair information prior to your appointment."
+
+  <!-- <HeroText
     tagline="Contact"
-  />
+    title="Let's Connect!"
+  /> -->
+
+  <!-- Contact Container -->
+  <WidgetWrapper containerClass={`max-w-7xl`}>
+    <div
+      class=`w-full h-fit max-w-wrapper-max mx-auto flex flex-col max-w-contain-max lg:max-w-content-max items-center gap-10 lg:items-start lg:flex-row lg:gap-10 lg:justify-between contain`
+    >
+      <div class="wrapper w-full lg:max-w-1/2 flex flex-col gap-10 lg:gap-16">
+        <div class="image-wrapper rounded-xl w-full h-fit relative flex flex-col items-center justify-end">
+          <div class="rounded-xl w-full h-fit overflow-hidden shadow-sm">
+            <GoogleMaps />
+          </div>
+          <div class="absolute translate-y-1/2 mx-auto z-10 w-[80%] h-fit bg-white rounded-xl shadow-md p-5 gap-5">
+            <p class="text-primary font-serif text-lg font-semibold">Address</p>
+            <p class="text-muted font-sm">651 Dupont St Toronto, Ontario M6G 1Z4</p>
+          </div>
+        </div>
+        <div class="flex flex-col gap-10">
+          <div class="description flex flex-col gap-2">
+            <h3 class="text-primary text-3xl font-serif font-bold my-3">Contact</h3>
+            <p class="text-muted">Please use the general contact form to submit your inquiries.</p>
+            <p class="text-muted">
+              For new clients, please fill out the New Client Form to submit your hair information prior to your
+              appointment.
+            </p>
+          </div>
+          <ul class="flex flex-col gap-4"></ul>
+        </div>
+      </div>
+      <div class="w-full">
+        <ContactUs
+          id="form"
+          inputs={[
+            {
+              type: 'text',
+              name: 'name',
+              label: 'Name',
+            },
+            {
+              type: 'email',
+              name: 'email',
+              label: 'Email',
+            },
+          ]}
+          textarea={{
+            label: 'Message',
+          }}
+          disclaimer={{
+            label:
+              'By submitting this contact form, you acknowledge and agree to the collection of your personal information.',
+          }}
+          title="Get in Touch"
+          subtitle="For all general inquiries please send us a message using the general form. New clients, please fill out the New Client Form to submit your hair information prior to your appointment."
+          tagline="Contact"
+        />
+      </div>
+    </div>
+  </WidgetWrapper>
 </Layout>
