--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -26,7 +26,7 @@ const metadata = {
       class=`w-full h-fit max-w-wrapper-max mx-auto flex flex-col max-w-contain-max lg:max-w-content-max items-center gap-10 lg:items-start lg:flex-row lg:gap-10 lg:justify-between contain`
     >
       <div class="wrapper w-full lg:max-w-1/2 flex flex-col gap-10 lg:gap-16">
-        <div class="image-wrapper rounded-xl w-full h-fit relative flex flex-col items-center justify-end">
+        <div class="hidden rounded-xl w-full h-fit relative lg:flex flex-col items-center justify-end">
           <div class="rounded-xl w-full h-fit overflow-hidden shadow-sm">
             <GoogleMaps />
           </div>
@@ -35,9 +35,9 @@ const metadata = {
             <p class="text-muted font-sm">651 Dupont St Toronto, Ontario M6G 1Z4</p>
           </div>
         </div>
-        <div class="flex flex-col gap-10">
-          <div class="description flex flex-col gap-2">
-            <h3 class="text-primary text-3xl font-serif font-bold my-3">Contact</h3>
+        <div class="flex flex-col lg:gap-10">
+          <div class="description flex flex-col gap-2 mt-5">
+            <h3 class="text-primary text-5xl font-serif font-bold lg:mb-3 lg:text-3xl">Contact</h3>
             <p class="text-muted">Please use the general contact form to submit your inquiries.</p>
             <p class="text-muted">
               For new clients, please fill out the New Client Form to submit your hair information prior to your
