--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,9 +41,9 @@ const metadata = {
         <Button
           variant="primary"
           text="Schedule an Appointment"
-          href="https://www.kathymach.com/appointments"
+          href="https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so"
           target="_blank"
-          type="button"
+          type="anchor"
         />
       </div>
     </Fragment>
@@ -80,7 +80,7 @@ const metadata = {
         price: 'starting from $120',
         callToAction: {
           text: 'Schedule an Appointment',
-          href: 'https://www.kathymach.com/appointments',
+          href: 'https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so',
           target: '_blank',
         },
       },
@@ -91,7 +91,7 @@ const metadata = {
         price: '$100',
         callToAction: {
           text: 'Schedule an Appointment',
-          href: 'https://www.kathymach.com/appointments',
+          href: 'https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so',
           target: '_blank',
         },
       },
@@ -102,7 +102,7 @@ const metadata = {
         price: 'starting from $300',
         callToAction: {
           text: 'Schedule an Appointment',
-          href: 'https://www.kathymach.com/appointments',
+          href: 'https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so',
           target: '_blank',
         },
       },
@@ -114,7 +114,7 @@ const metadata = {
         price: 'Price upon consultation',
         callToAction: {
           text: 'Schedule an Appointment',
-          href: 'https://www.kathymach.com/appointments',
+          href: 'https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so',
           target: '_blank',
         },
       },
@@ -125,7 +125,7 @@ const metadata = {
         price: 'Add-on $50+',
         callToAction: {
           text: 'Schedule an Appointment',
-          href: 'https://www.kathymach.com/appointments',
+          href: 'https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so',
           target: '_blank',
         },
       },
@@ -136,9 +136,9 @@ const metadata = {
         <Button
           variant="primary"
           text="Schedule an Appointment"
-          href="https://www.kathymach.com/appointments"
+          href="https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so"
           target="_blank"
-          type="button"
+          type="anchor"
         />
       </div>
     </Fragment>
@@ -195,9 +195,9 @@ const metadata = {
         <Button
           variant="primary"
           text="Schedule an Appointment"
-          href="https://www.kathymach.com/appointments"
+          href="https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so"
           target="_blank"
-          type="button"
+          type="anchor"
         />
       </div>
     </Fragment>
