--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -9,6 +9,7 @@ interface Link {
   href?: string;
   ariaLabel?: string;
   icon?: string;
+  target?: string;
 }
 
 interface Links {
@@ -24,7 +25,7 @@ export interface Props {
   theme?: string;
 }
 
-const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme = 'light' } = Astro.props;
+const { socialLinks = [], links = [], footNote = '', theme = 'light' } = Astro.props;
 ---
 
 <footer class:list={[{ dark: theme === 'dark' }, 'relative border-t border-gray-200 dark:border-slate-800 not-prose']}>
@@ -136,12 +137,13 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
         {
           socialLinks?.length ? (
             <ul class="flex mb-4 md:order-1 -ml-2 md:ml-4 md:mb-0 rtl:ml-0 rtl:-mr-2 rtl:md:ml-0 rtl:md:mr-4">
-              {socialLinks.map(({ ariaLabel, href, text, icon }) => (
+              {socialLinks.map(({ ariaLabel, href, text, icon, target }) => (
                 <li>
                   <a
                     class="text-muted dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center"
                     aria-label={ariaLabel}
                     href={href}
+                    target={target}
                   >
                     {icon && (
                       <Icon
@@ -159,7 +161,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
           )
         }
 
-        <div class="text-sm mr-4 dark:text-muted">
+        <div class="text-xs mr-4 text-muted">
           <Fragment set:html={footNote} />
         </div>
       </div>
