--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -155,6 +155,7 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`;
                 {...btnProps}
                 class="font-serif uppercase font-normal px-2 py-3 xl:px-4"
                 type="anchor"
+                variant="link"
               />
             ))
         }
