update meta data

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Haircut from '~/assets/images/services/haircut.jpg';
 import HairTreatment from '~/assets/images/services/hair-treatment.jpg';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: 'BeigeByKat | Home',
   ignoreTitleTemplate: true,
 };
 ---
