--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -25,10 +25,10 @@ export interface Props {
   theme?: string;
 }
 
-const { socialLinks = [], links = [], footNote = '', theme = 'light' } = Astro.props;
+const { socialLinks = [], links = [], footNote = '' } = Astro.props;
 ---
 
-<footer class:list={[{ dark: theme === 'dark' }, 'relative border-t border-gray-200 dark:border-slate-800 not-prose']}>
+<footer class:list={['relative border-t border-gray-200 dark:border-slate-800 not-prose']}>
   <div
     class="dark:bg-dark absolute inset-0 pointer-events-none"
     aria-hidden="true"
