--- a/src/components/ui/ConsultationForm.astro
+++ b/src/components/ui/ConsultationForm.astro
@@ -85,20 +85,17 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
             data-step={index + 1}
           >
             <div
-              class={`step-number flex items-center justify-center rounded-full w-8 h-8 bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-white ${index === 0 ? 'bg-primary-600 dark:bg-primary-500 text-white' : ''}`}
+              class={`step-number flex items-center justify-center rounded-full w-8 h-8 bg-gray-200text-gray-800  ${index === 0 ? 'bg-primary-600 text-white' : ''}`}
             >
               {index + 1}
             </div>
-            <div class="step-title text-xs mt-2 text-center text-gray-600 dark:text-gray-400">{step.title}</div>
+            <div class="step-title text-xs mt-2 text-center text-gray-600">{step.title}</div>
           </div>
         ))
       }
     </div>
-    <div class="step-progress-bar h-1 mt-4 bg-gray-200 dark:bg-gray-700 rounded-full">
-      <div
-        class="step-progress-bar-fill h-full w-0 bg-primary-600 dark:bg-primary-500 rounded-full transition-all duration-300"
-      >
-      </div>
+    <div class="step-progress-bar h-1 mt-4 bg-gray-200 rounded-full">
+      <div class="step-progress-bar-fill h-full w-0 bg-primary-600 rounded-full transition-all duration-300"></div>
     </div>
   </div>
 
@@ -109,7 +106,7 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
         class={`form-step ${stepIndex === 0 ? 'active' : 'hidden'}`}
         data-step={stepIndex + 1}
       >
-        <h3 class="text-xl font-semibold mb-4 text-gray-800 dark:text-white">{step.title}</h3>
+        <h3 class="text-xl font-semibold mb-4 text-gray-800 ">{step.title}</h3>
 
         {step.inputs &&
           step.inputs.map(
@@ -126,7 +123,7 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
                 {label && (
                   <label
                     for={`${name}-${stepIndex}`}
-                    class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1"
+                    class="block text-sm font-medium text-gray-700  mb-1"
                   >
                     {label} {required && <span class="text-red-600">*</span>}
                   </label>
@@ -136,7 +133,7 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
                   <select
                     id={`${name}-${stepIndex}`}
                     name={name}
-                    class="w-full px-4 py-3 rounded-lg border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 text-md"
+                    class="w-full px-4 py-3 rounded-lg border border-gray-200 bg-white ext-md"
                     required={required}
                   >
                     <option value="">Please select...</option>
@@ -153,12 +150,12 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
                           id={`${name}-${option.value}`}
                           name={name}
                           value={option.value}
-                          class="h-4 w-4 text-primary-600 focus:ring-primary-500 border-gray-300 dark:border-gray-700"
+                          class="h-4 w-4 text-primary-600 focus:ring-primary-500 border-gray-300 "
                           required={required}
                         />
                         <label
                           for={`${name}-${option.value}`}
-                          class="ml-2 block text-sm text-gray-700 dark:text-gray-300"
+                          class="ml-2 block text-sm text-gray-700"
                         >
                           {option.label}
                         </label>
@@ -172,7 +169,7 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
                     name={name}
                     placeholder={placeholder}
                     autocomplete={autocomplete}
-                    class="w-full px-4 py-3 rounded-lg border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 text-md"
+                    class="w-full px-4 py-3 rounded-lg border border-gray-200 bg-white text-md"
                     required={required}
                   />
                 )}
@@ -184,7 +181,7 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
           <div class="mb-4">
             <label
               for={step.textarea.name}
-              class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1"
+              class="block text-sm font-medium text-gray-700  mb-1"
             >
               {step.textarea.label} {step.textarea.required && <span class="text-red-600">*</span>}
             </label>
@@ -193,7 +190,7 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
               name={step.textarea.name}
               rows={step.textarea.rows || 4}
               placeholder={step.textarea.placeholder}
-              class="w-full px-4 py-3 rounded-lg border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 text-md"
+              class="w-full px-4 py-3 rounded-lg border border-gray-200  bg-white text-md"
               required={step.textarea.required}
             />
           </div>
@@ -229,14 +226,14 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
                       id="disclaimer"
                       name="disclaimer"
                       type="checkbox"
-                      class="cursor-pointer mt-1 w-4 h-4 text-primary-600 rounded border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900"
+                      class="cursor-pointer mt-1 w-4 h-4 text-primary-600 rounded border border-gray-200 bg-white "
                       required
                     />
                   </div>
                   <div class="ml-3">
                     <label
                       for="disclaimer"
-                      class="cursor-pointer select-none text-sm text-gray-600 dark:text-gray-400"
+                      class="cursor-pointer select-none text-sm text-gray-600"
                     >
                       {disclaimer.label}
                     </label>
@@ -312,9 +309,9 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
     const stepIndicatorItems = form.querySelectorAll('.step-indicator-item > .step-number');
     stepIndicatorItems.forEach((indicator, index) => {
       if (index === 0) {
-        indicator.classList.add('bg-gray-100', 'dark:bg-gray-500', 'text-white');
+        indicator.classList.add('bg-gray-100', 'text-white');
       } else {
-        indicator.classList.add('bg-gray-200', 'dark:bg-gray-700');
+        indicator.classList.add('bg-gray-200');
       }
     });
 
@@ -401,11 +398,11 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
         stepIndicators.forEach((indicator, index) => {
           if (index == currentStepNum) {
             console.log('current step num: ', currentStepNum);
-            indicator.classList.add('bg-gray-100', 'dark:bg-gray-500', 'text-white');
-            indicator.classList.remove('bg-gray-200', 'dark:bg-gray-700');
+            indicator.classList.add('bg-gray-100', 'text-white');
+            indicator.classList.remove('bg-gray-200');
           } else {
-            indicator.classList.remove('bg-gray-100', 'dark:bg-gray-500', 'text-white');
-            indicator.classList.add('bg-gray-200', 'dark:bg-gray-700');
+            indicator.classList.remove('bg-gray-100', 'text-white');
+            indicator.classList.add('bg-gray-200');
           }
         });
       });
@@ -430,8 +427,8 @@ const formId = `new-client-form-${Math.random().toString(36).substring(2, 9)}`;
         // Update step indicators
         stepIndicators.forEach((indicator, index) => {
           if (index >= prevStepNum) {
-            indicator.classList.remove('bg-primary-600', 'dark:bg-primary-500', 'text-white');
-            indicator.classList.add('bg-gray-200', 'dark:bg-gray-700');
+            indicator.classList.remove('bg-primary-600', 'text-white');
+            indicator.classList.add('bg-gray-200');
           }
         });
       });
