--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -28,14 +28,14 @@ export interface Props {
 const { socialLinks = [], links = [], footNote = '' } = Astro.props;
 ---
 
-<footer class:list={['relative border-t border-gray-200 dark:border-slate-800 not-prose']}>
+<footer class:list={['relative border-t border-gray-200 not-prose']}>
   <div
-    class="dark:bg-dark absolute inset-0 pointer-events-none"
+    class="absolute inset-0 pointer-events-none"
     aria-hidden="true"
   >
   </div>
   <div
-    class="relative max-w-7xl mx-auto px-4 sm:px-6 dark:text-slate-300 intersect-once intersect-quarter intercept-no-queue motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+    class="relative max-w-7xl mx-auto px-4 sm:px-6 backdrop:intersect-once intersect-quarter intercept-no-queue motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
   >
     <div class="pt-8 md:pt-12">
       <!-- Logo at top by itself -->
@@ -131,16 +131,14 @@ const { socialLinks = [], links = [], footNote = '' } = Astro.props;
       </div>
 
       <!-- Social Links and Footer Note -->
-      <div
-        class="md:flex md:items-center md:justify-between py-6 md:py-8 border-t border-gray-200 dark:border-slate-800 mt-8"
-      >
+      <div class="md:flex md:items-center md:justify-between py-6 md:py-8 border-t border-gray-200 mt-8">
         {
           socialLinks?.length ? (
             <ul class="flex mb-4 md:order-1 -ml-2 md:ml-4 md:mb-0 rtl:ml-0 rtl:-mr-2 rtl:md:ml-0 rtl:md:mr-4">
               {socialLinks.map(({ ariaLabel, href, text, icon, target }) => (
                 <li>
                   <a
-                    class="text-muted dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center"
+                    class="text-muted  hover:bg-gray-100 focus:outline-none focus:ring-4 focus:ring-gray-200  rounded-lg text-sm p-2.5 inline-flex items-center"
                     aria-label={ariaLabel}
                     href={href}
                     target={target}
