--- a/src/components/ui/Form.astro
+++ b/src/components/ui/Form.astro
@@ -29,7 +29,7 @@ const { inputs, textarea, disclaimer, button = 'Contact us', description = '' } 
                 id={name}
                 autocomplete={autocomplete}
                 placeholder={placeholder}
-                class="py-3 px-4 block w-full text-md rounded-lg border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900"
+                class="py-3 px-4 block w-full text-md rounded-lg border border-gray-200  bg-white "
               />
             </div>
           )
@@ -50,7 +50,7 @@ const { inputs, textarea, disclaimer, button = 'Contact us', description = '' } 
           name={textarea.name ? textarea.name : 'message'}
           rows={textarea.rows ? textarea.rows : 4}
           placeholder={textarea.placeholder}
-          class="py-3 px-4 block w-full text-md rounded-lg border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900"
+          class="py-3 px-4 block w-full text-md rounded-lg border border-gray-200 bg-white"
         />
       </div>
     )
@@ -64,13 +64,13 @@ const { inputs, textarea, disclaimer, button = 'Contact us', description = '' } 
             id="disclaimer"
             name="disclaimer"
             type="checkbox"
-            class="cursor-pointer mt-1 py-3 px-4 block w-full text-md rounded-lg border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900"
+            class="cursor-pointer mt-1 py-3 px-4 block w-full text-md rounded-lg border border-gray-200 bg-white"
           />
         </div>
         <div class="ml-3">
           <label
             for="disclaimer"
-            class="cursor-pointer select-none text-sm text-gray-600 dark:text-gray-400"
+            class="cursor-pointer select-none text-sm text-gray-600"
           >
             {disclaimer.label}
           </label>
@@ -95,7 +95,7 @@ const { inputs, textarea, disclaimer, button = 'Contact us', description = '' } 
   {
     description && (
       <div class="mt-3 text-center">
-        <p class="text-sm text-gray-600 dark:text-gray-400">{description}</p>
+        <p class="text-sm text-gray-600">{description}</p>
       </div>
     )
   }
